css/main.css
/* ... */
.block {
  flex: 1;
  background-color: var(--primary-color);
  transform: scaleY(1);
  will-change: transform;
}

/* Text selection */
::selection {
  background: var(--accent-color);   
  color: var(--primary-color);
}

/* Mobile menu */
.menu-btn {
  font-size: 22px;
  margin-left: auto;
  visibility: hidden;
  pointer-events: none;
  color: var(--primary-color) !important;
  font-weight: bold;
}
.menu {
  margin: 0;
  visibility: hidden;
  display: flex;
  flex-direction: column;
  gap: 20px;
  position: fixed;
  top: 0;
  right: 50%;
  transform: translate(50%, -200%);
  background-color: var(--accent-color);
  width: 100vw;
  align-items: center;
  z-index: -1;
  padding: 150px 0 20px;
  border-bottom-left-radius: var(--border-radius);
  border-bottom-right-radius: var(--border-radius);
  transition: all 0.8s ease-in-out;
  pointer-events: none;
}

.menu.visible {
  visibility: visible;
  pointer-events: all;
  transform: translate(50%, 0);
}

.menu li {
  font-size: 20px;
  list-style: none;
  font-family: var(--accent-font);
  transition: all 0.2s ease-out;
}

.menu li a {
  color: var(--primary-color);
  text-decoration: none;
  padding: 10px 20px;
  border-radius: var(--border-radius);
  transition: all 0.2s ease-in-out;
}

.menu li a:hover { background-color: var(--contrast-color); }

/* Home */
#home {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  width: 100%;
  background-color: var(--accent-color);
  font-family: var(--text-font);
  background-image: url("../assets/home_animation.gif");
}

.home-logo { width: 40vw; height: auto; }

/* Join Us */
#join-us {
  width: 100%;
  background-color: var(--nav-color);
  display: flex;
  flex-direction: column;
  align-items: center;
  color: var(--contrast-color);
  padding: 200px 0 50px;
  text-align: center;
}

.join-us .title {
  margin: 0;
  font-size: 60px;
  max-width: 80%;
}

.join-us p {
  font-size: 18px;
  line-height: 1.5;
  max-width: 600px;
  margin: 0 0 30px;
  color: var(--faded-white);
}

.join-btn {
  padding: 15px 30px;
  font-size: 20px;
  font-family: var(--accent-font);
  background-color: var(--contrast-color);
  border-radius: var(--border-radius);
  color: var(--nav-color);
  text-decoration: none;
  transition: all 0.2s ease-in-out;
}

.join-btn:hover {
  background-color: var(--accent-color);
  color: var(--primary-color);
}

/* Telemóvel */
@media (max-width: 450px) {

  .box { padding: 20px; font-size: 14px; }

  .jam-card {
    width: 350px;
    height: 350px;
    transition: all 0.5s ease-in-out;
  }

  #footer { font-size: 20px; }
  .footer .col { height: 110px; }
  .footer p { font-size: 18px; }
  .footer .social-links a { font-size: 24px; }


  .join-us .title { font-size: 40px; }
  .join-us p { font-size: 18px; padding: 0 20px; }
  .join-btn { padding: 30px 50px; font-size: 22px; }

}

@media (max-width: 1420px){
  #navbar {
  width: 80vw !important;
  }
}

@media (max-width: 1050px) {
    #navbar { width: 90vw; top: 10px; font-size: 18px; }
    .navbar { padding: 15px 20px; }
    .nav-links { visibility: hidden; }

    .menu.visible { align-items: center; padding: 150px 0 20px; }
    .menu-btn { visibility: visible; pointer-events: all; }


}

@media (max-width: 840px) {
   #events .row { flex-direction: column; } 

  .grid-container {
    grid-auto-columns: 350px;
    grid-auto-rows: 250px;
    grid-template-areas: 
      "box-1"
      "box-2"
      "box-3" 
      "box-4";
  }

  .jam { width: 80%; padding: 50px 20px; }
  .jam-title { font-size: 32px; }
  .jam-date { font-size: 18px; }

  .join-us p{
    max-width: 80%;
  }
  
  .events, .projects {
    padding: 50px 0;
  }

  .join-us {
    padding: 100px 0 50px !important;
  }
  
}

@media (max-width: 405px) {

  #navbar {
    width: 90vw !important;
  }

  .buttons a {
    font-size: 14px;
  }

  .buttons i {
    font-size: 20px;
  }

  .events img, .events .event-card, .events .event-card-img {
    width: 80vw !important;
    height: 80vw !important;
  }

  .grid-container {
    grid-auto-columns: 80vw;
    grid-auto-rows: 200px;
  }

  .join-us .title { font-size: 40px; }
  .join-us p { font-size: 18px; }

}

